Add Event and Option

--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -13,6 +13,7 @@
       <th>Life level</th>
       <th>Score</th>
       <th>Year</th>
+      <th>Budget</th>
       <th>Reg rel</th>
       <th>Is conquered</th>
       <th>Agriculture</th>
@@ -38,6 +39,7 @@
         <td><%= country.life_level %></td>
         <td><%= country.score %></td>
         <td><%= country.year %></td>
+        <td><%= country.budget %></td>
         <td><%= country.reg_rel %></td>
         <td><%= country.is_conquered %></td>
         <td><%= country.agriculture %></td>
