--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -41,6 +41,11 @@
 </p>
 
 <p>
+  <strong>Budget:</strong>
+  <%= @country.budget %>
+</p>
+
+<p>
   <strong>Reg rel:</strong>
   <%= @country.reg_rel %>
 </p>
