--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,12 @@
     </head>
 
   <body>
+    <div>
+      <%= link_to 'Countries', countries_path %>
+      <%= link_to 'Events', events_path %>
+      <%= link_to 'Options', options_path %>
+    </div>
     <%= yield %>
+
   </body>
 </html>
