--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
       <%= link_to 'Countries', countries_path %>
       <%= link_to 'Events', events_path %>
       <%= link_to 'Options', options_path %>
+      <%= link_to 'Ministers', ministers_path %>
+      <%= link_to 'Goals', goals_path %>
     </div>
     <%= yield %>
 
