--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
 
   <body>
     <div>
+      <%= link_to 'Home', root_path %>
       <%= link_to 'Countries', countries_path %>
       <%= link_to 'Events', events_path %>
       <%= link_to 'Options', options_path %>
