--- a/app/views/application/home_page.html.erb
+++ b/app/views/application/home_page.html.erb
@@ -5,4 +5,5 @@
   <%= text_field_tag(:game) %>
   <%= submit_tag("New Game") %>
 <% end %>
+<p>Up to <%= Minister.count %> Players</p>
 <%# link_to "New Game", new_country_path %>
