--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<%= link_to 'Play with this country', event_path(1, country_id: @country.id), class: "btn btn-success" %>
 
 <p>
   <strong>Name:</strong>
