--- a/app/views/ministers/index.html.erb
+++ b/app/views/ministers/index.html.erb
@@ -6,29 +6,45 @@ $(document).ready(function(){
 });
 </script>
 
-<h1>Ministers</h1>
+<% if params[:game] %>
+  <div class="card" style="width: 22rem;">
+    <div class="card-body">
+      <h5 class="card-title">Ministers</h5>
+      <% @ministers.each do |minister| %>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title"><%= minister.role %></h5>
+            <p class="card-text"><%= minister.description %></p>
+              <a href="#" class="btn btn-primary">Choose Option</a>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+<% else %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Role</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @ministers.each do |minister| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= minister.role %></td>
-        <td><%= minister.description %></td>
-        <td><%= link_to 'Show', minister %></td>
-        <td><%= link_to 'Edit', edit_minister_path(minister) %></td>
-        <td><%= link_to 'Destroy', minister, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Role</th>
+        <th>Description</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
+    </thead>
+
+    <tbody>
+      <% @ministers.each do |minister| %>
+        <tr>
+          <td><%= minister.role %></td>
+          <td><%= minister.description %></td>
+          <td><%= link_to 'Show', minister %></td>
+          <td><%= link_to 'Edit', edit_minister_path(minister) %></td>
+          <td><%= link_to 'Destroy', minister, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
 </table>
+<% end %>
 
 <br>
 
