--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -6,9 +6,9 @@
       <div class="card" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title"><%= option.title %></h5>
-          <p class="card-text"><%= "Consequence: #{option.operator} #{option.amount} #{option.on_what}" %></p>
+          <p class="card-text"><%= "Consequence: #{option.amount} #{option.on_what}" %></p>
           <% if params[:country_id] && Country.find(params[:country_id]).is_option_available(option) %>
-            <a href="#" class="btn btn-primary">Choose Option</a>
+            <%= link_to 'Choose Option', { controller: "countries", action: "show", id: params[:country_id], option_id: option.id, turn: true }, class: "btn btn-primary" %>
           <% else %>
             <a href="#" class="btn btn-primary disabled">Choose Option</a>
           <% end %>
@@ -26,4 +26,4 @@
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
 
-<%= link_to 'Next Turn', event_path(@event, country_id: params[:country_id]), class: "btn btn-success" %>
+<%# link_to 'Next Turn', event_path(@event, country_id: params[:country_id], turn: true), class: "btn btn-success" %>
