--- a/app/views/options/_form.html.erb
+++ b/app/views/options/_form.html.erb
@@ -7,7 +7,7 @@
     <%= f.input :title %>
     <%= f.input :operator,  collection: Option.operators.keys %>
     <%= f.input :amount %>
-    <%  columns = %i[budget resilience civ_num deg life_level score year reg_rel is_conquered agriculture education security comms social_sec health water energy] %>
+    <%  columns = %i[budget resilience civ_num deg life_level reg_rel agriculture education security comms social_sec health water energy] %>
     <%= f.input :on_what,   collection: columns %>
     <%= f.association :event %>
     <%= f.input :min_resilience,  collection: Option.min_resiliences.keys %>
