Hide unused option operator

--- a/app/views/options/_form.html.erb
+++ b/app/views/options/_form.html.erb
@@ -5,7 +5,7 @@
 
   <div class="form-inputs">
     <%= f.input :title %>
-    <%= f.input :operator,  collection: Option.operators.keys %>
+    <%# f.input :operator,  collection: Option.operators.keys %>
     <%= f.input :amount %>
     <%  columns = %i[budget resilience civ_num deg life_level reg_rel agriculture education security comms social_sec health water energy] %>
     <%= f.input :on_what,   collection: columns %>
