--- a/app/views/options/index.html.erb
+++ b/app/views/options/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Title</th>
-      <th>Operator</th>
+      <!-- <th>Operator</th> -->
       <th>Amount</th>
       <th>On_what</th>
       <th>Event</th>
@@ -30,7 +30,7 @@
     <% @options.each do |option| %>
       <tr>
         <td><%= option.title %></td>
-        <td><%= option.operator %></td>
+        <!-- <td><%# option.operator %></td> -->
         <td><%= option.amount %></td>
         <td><%= option.on_what %></td>
         <td><%= option.event.title %></td>
