--- a/app/views/options/show.html.erb
+++ b/app/views/options/show.html.erb
@@ -5,10 +5,10 @@
   <%= @option.title %>
 </p>
 
-<p>
+<!-- <p>
   <strong>Operator:</strong>
-  <%= @option.operator %>
-</p>
+  <%# @option.operator %>
+</p> -->
 
 <p>
   <strong>Amount:</strong>
