--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,10 +13,10 @@
     <% if country.resilience == "civil_war" %>
       <strong>Resilience:</strong>           <span style="color: red"><%= country.resilience %> (civ_num and budget declining)</span>
     <% else %>
-    <strong>Resilience:</strong>           <%= country.reg_rel %>
+    <strong>Resilience:</strong>           <%= country.resilience %>
     <% end %>
     <% if country.reg_rel == "war" %>
-      <strong>Reg rel:</strong>           <span style="color: red"><%= country.resilience %> (civ_num and budget declining)</span>
+      <strong>Reg rel:</strong>           <span style="color: red"><%= country.reg_rel %> (civ_num and budget declining)</span>
     <% else %>
     <strong>Reg rel:</strong>           <%= country.reg_rel %>
     <% end %>
