Add costs to country form

--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -18,3 +18,13 @@
     <%= f.button :submit, class: "btn btn-success" %>
   </div>
 <% end %>
+
+Costs:
+agriculture_costs: <%= @agriculture_costs %>
+education_costs: <%= @education_costs %>
+security_costs: <%= @security_costs %>
+comms_costs: <%= @comms_costs %>
+social_sec_costs: <%= @social_sec_costs %>
+health_costs: <%= @health_costs %>
+water_costs: <%= @water_costs %>
+energy_costs: <%= @energy_costs %>
