--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,14 +16,18 @@
     </head>
 
   <body>
-    <div>
-      <%= link_to 'Home', root_path %>
-      <%= link_to 'Countries', countries_path %>
-      <%= link_to 'Events', events_path %>
-      <%= link_to 'Options', options_path %>
-      <%= link_to 'Ministers', ministers_path %>
-      <%= link_to 'Goals', goals_path %>
-    </div>
+    <% if admin_signed_in? %>
+      <div>
+        Hello Admin! Here Are Some Cool Links:
+        <%= link_to 'Home', root_path %>
+        <%= link_to 'Countries', countries_path %>
+        <%= link_to 'Events', events_path %>
+        <%= link_to 'Options', options_path %>
+        <%= link_to 'Ministers', ministers_path %>
+        <%= link_to 'Goals', goals_path %>
+        <%= link_to('Logout', destroy_admin_session_path, method: :delete) %>
+      </div>
+    <% end %>
     <%= yield %>
     <%= render 'layouts/footer' %>
 
