js in country new

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,20 @@
  */
 
 @import "bootstrap";
+
+
+.w-screen{
+	width: 100vw;
+}
+
+.h-screen{
+	height: 100vh;
+}
+
+.h-5{
+	height: 5rem
+}
+
+.bottom-0{
+	bottom: 0;
+}
