--- a/app/views/ministers/index.html.erb
+++ b/app/views/ministers/index.html.erb
@@ -3,14 +3,15 @@ $(document).ready(function(){
 	jQuery.fn.exists = function(){ return this.length > 0; }
 	minister_num = 0
  // $("#minister-0").toggleClass('d-none');
+ $("#next-title").html("Ministers");
  $("#between").toggleClass('d-none');
-
  $(".next").click(function(event) {
 	 $(this).parents(".card").toggleClass('d-none')
 	 if ( $(this).parents("#between").exists()) {
 		 $("#minister-" + minister_num).toggleClass('d-none');
 	 }
 	 else {
+		 $("#next-title").html("Next Player");
 		 minister_num += 1
 	 	$("#between").toggleClass('d-none');
 	 }
@@ -24,22 +25,22 @@ $(document).ready(function(){
 </script>
 
 <% if params[:game] %>
-    <div class="card-body">
-      <h5 class="card-title">Ministers</h5>
+
+    <div class="card-body h-screen">
       <% @ministers.each_with_index do |minister, index| %>
         <div class="card d-none h-100" id="minister-<%= index %>">
-          <div class="card-body">
+          <div class="card-body h-100 d-flex flex-column justify-content-between">
             <h5 class="card-title"><%= minister.role %></h5>
             <p class="card-text"><%= minister.description %></p>
-						<button class="next btn btn-primary" type="button" name="button">next</button>
+							<button class="next btn btn-primary w-100 h-5" type="button" name="button">next</button>
           </div>
         </div>
       <% end %>
-			<div class="card d-none" id="between">
-				<div class="card-body">
+			<div class="card d-none h-100" id="between">
+				<div class="card-body h-100 d-flex flex-column justify-content-between">
 					<h5 class="card-title" id="next-title">next player</h5>
-					<%= link_to 'Start Game', new_country_path, class: "btn btn-success d-none", id:"start-game" %>
-					<button id="next" class="next btn btn-primary" type="button" name="button">next</button>
+					<%= link_to 'Start Game', new_country_path, class: "btn btn-success d-none w-100 h-5", id:"start-game" %>
+					<button id="next" class="next btn btn-primary w-100 h-5" type="button" name="button">next</button>
 				</div>
 			</div>
     </div>
@@ -68,5 +69,3 @@ $(document).ready(function(){
 </table>
 <%= link_to 'New Minister', new_minister_path %>
 <% end %>
-
-<br>
