--- a/app/views/countries/new.html.erb
+++ b/app/views/countries/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Country</h1>
+<h1>new country</h1>
 
 <%= render 'form', country: @country %>
 
-<%= link_to 'Back', countries_path %>
+<%= link_to 'Back', countries_path if admin_signed_in?%>
