--- a/app/views/layouts/_data.html.erb
+++ b/app/views/layouts/_data.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer bg-white">
   <% if params[:country_id] %>
     <div>
       <% country = Country.find(params[:country_id]) %>
