--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,3 +30,18 @@
 .bottom-0{
 	bottom: 0;
 }
+.tiny{
+	font-size: 1rem !important;
+}
+.small{
+	font-size: 2rem !important;
+}
+.medium{
+	font-size: 4rem !important;
+}
+.large{
+	font-size: 6rem !important;
+}
+.line-height-1{
+	line-height: 1;
+}
