--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -6,11 +6,11 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title"><%= option.title %></h5>
-          <p class="card-text"><%= "Consequence: #{option.amount} #{option.on_what}" %></p>
+          <p class="card-text"><%= "#{I18n.t("event.show.consequense")}: #{option.amount} #{Country.human_attribute_name(option.on_what)}" %></p>
           <% if params[:country_id] && Country.find(params[:country_id]).is_option_available(option) %>
-            <%= link_to 'Choose Option', { controller: "countries", action: "show", id: params[:country_id], option_id: option.id, turn: true }, class: "btn btn-primary" %>
+            <%= link_to I18n.t("event.show.choose_option"), { controller: "countries", action: "show", id: params[:country_id], option_id: option.id, turn: true }, class: "btn btn-primary" %>
           <% else %>
-            <a href="#" class="btn btn-primary disabled">Choose Option</a>
+            <a href="#" class="btn btn-primary disabled"><%= I18n.t("event.show.choose_option") %></a>
           <% end %>
         </div>
       </div>
