--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
         <%= link_to 'Ministers',    ministers_path %>
         <%= link_to 'Goals',        goals_path %>
         <%= link_to('Logout',       destroy_admin_session_path, method: :delete) %>
-        <%= Fact.all.sample.content %>
+        <%= Fact.all.sample.content if Fact.first.present? %>
       </div>
     <% end %>
     <%= yield %>
